--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Whack-A-Mole!</title>
+    <title>Whack-A-Zombie!</title>
 </head>
 <body>
 
-    <h1>Whack-A-Mole!</h1>
+    <h1>Whack-A-Zombie!</h1>
 
     <h2>Your Score:</h2>
     <h2 id="score">0</h2>
