--- a/index.html
+++ b/index.html
@@ -4,30 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
     <title>Whack-A-Zombie!</title>
 </head>
-<body>
+    <body>
+        <main>
+            <h1>Whack-A-Zombie!</h1>
 
-    <h1>Whack-A-Zombie!</h1>
+            <section class="scoreSection">
+                <h2>Your Score: </h2>
+                <h2 id="score"> 0</h2>
+            </section>
+            
+            <section class="timerSection">
+                <h2>Seconds left: </h2>
+                <h2 id="time-left"> 60</h2>
+            </section>
 
-    <h2>Your Score:</h2>
-    <h2 id="score">0</h2>
-
-    <h2>Seconds left:</h2>
-    <h2 id="time-left">60</h2>
-
-    <div class="grid">
-        <div class="square" id="1"></div>
-        <div class="square" id="2"></div>
-        <div class="square" id="3"></div>
-        <div class="square" id="4"></div>
-        <div class="square" id="5"></div>
-        <div class="square" id="6"></div>
-        <div class="square" id="7"></div>
-        <div class="square" id="8"></div>
-        <div class="square" id="9"></div>
-    </div>
-    
-</body>
+            <div class="grid">
+                <div class="square" id="1"></div>
+                <div class="square" id="2"></div>
+                <div class="square" id="3"></div>
+                <div class="square" id="4"></div>
+                <div class="square" id="5"></div>
+                <div class="square" id="6"></div>
+                <div class="square" id="7"></div>
+                <div class="square" id="8"></div>
+                <div class="square" id="9"></div>
+            </div>
+        </main>
+    </body>
 <script src="app.js" charset="utf-8"></script>
 </html>
