finalized styling some more

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
         <main>
             <h1>Whack-A-Zombie!</h1>
 
+            <h2>by<a href="https://github.com/stronghearth" target="/blank">Stronghearth</a></h2>
+
             <section class="scoreSection">
-                <h2>Your Score: </h2>
-                <h2 id="score"> 0</h2>
+                <h3>Your Score: </h3>
+                <h3 id="score"> 0</h3>
             </section>
             
             <section class="timerSection">
-                <h2>Seconds left: </h2>
-                <h2 id="time-left"> 60</h2>
+                <h3>Seconds left: </h3>
+                <h3 id="time-left"> 60</h3>
             </section>
 
             <div class="grid">
@@ -32,6 +34,12 @@
                 <div class="square" id="8"></div>
                 <div class="square" id="9"></div>
             </div>
+
+            <section class="links">
+                <a href="https://www.youtube.com/watch?v=lhNdUVh3qCc" target="/blank">FreeCodeCamp Tutorial</a>
+                <a href="https://github.com/stronghearth/whack-a-mole" target="/blank">Exercise Repo</a>
+            </section>
+
         </main>
     </body>
 <script src="app.js" charset="utf-8"></script>
